[gd_scene load_steps=13 format=3 uid="uid://i4x4bxwo1vwl"]

[ext_resource type="Script" path="res://mainmenu.gd" id="1_2tw01"]
[ext_resource type="Texture2D" uid="uid://dufsmvdq8n8eh" path="res://Start_Button_Sprite.png" id="1_wqhy5"]
[ext_resource type="Texture2D" uid="uid://c6nsdfql2cohq" path="res://Start_ButtonPressed_Sprite.png" id="2_0cm7t"]
[ext_resource type="Texture2D" uid="uid://qltf77i8134n" path="res://Start_ButtonHover_Sprite.png" id="3_yf0kv"]
[ext_resource type="Texture2D" uid="uid://2v6qdpvitve5" path="res://Quit_Button_Sprite.png" id="4_5ex5j"]
[ext_resource type="Texture2D" uid="uid://d3gun38sxtem0" path="res://Quit_ButtonPressed_Sprite.png" id="5_hwm7g"]
[ext_resource type="AudioStream" uid="uid://c7ky2tjl5edrt" path="res://button_SFX.wav" id="5_nh5g6"]
[ext_resource type="Texture2D" uid="uid://bvo02xl1mhsu6" path="res://Quit_ButtonHover_Sprite.png" id="6_u7641"]
[ext_resource type="Texture2D" uid="uid://co1er3skovoh7" path="res://Scissors_Sprite.png" id="9_5w6pb"]
[ext_resource type="Texture2D" uid="uid://cudoswimi37c8" path="res://ScissorsClosed_Sprite.png" id="10_vw4ye"]
[ext_resource type="Texture2D" uid="uid://bm0aigpihl10n" path="res://Stone_Sprite.png" id="11_j2vfw"]
[ext_resource type="Texture2D" uid="uid://dr6levg1tac6d" path="res://Paper_Sprite.png" id="12_p0wbm"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2tw01")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.552941, 0.541176, 0.560784, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(6, 6)
pivot_offset = Vector2(-20, -20)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Start" type="TextureButton" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("1_wqhy5")
texture_pressed = ExtResource("2_0cm7t")
texture_hover = ExtResource("3_yf0kv")

[node name="Quit" type="TextureButton" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
disabled = true
texture_normal = ExtResource("4_5ex5j")
texture_pressed = ExtResource("5_hwm7g")
texture_hover = ExtResource("6_u7641")

[node name="button_SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_nh5g6")

[node name="Control" type="Control" parent="."]
texture_filter = 1
anchors_preset = 0
offset_left = 800.0
offset_top = 224.25
offset_right = 840.0
offset_bottom = 264.25
scale = Vector2(6, 6)

[node name="Scissors" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 4.0
offset_top = 14.0
offset_right = 36.0
offset_bottom = 46.0
scale = Vector2(1.25, 1.25)
texture_normal = ExtResource("9_5w6pb")
texture_pressed = ExtResource("10_vw4ye")

[node name="Stone" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -17.6667
offset_top = -16.875
offset_right = 22.3333
offset_bottom = 23.125
texture = ExtResource("11_j2vfw")

[node name="Paper" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 23.5
offset_top = -12.875
offset_right = 63.5
offset_bottom = 27.125
texture = ExtResource("12_p0wbm")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
